--- a/nfs-config-esxi/index.adoc
+++ b/nfs-config-esxi/index.adoc
@@ -36,8 +36,9 @@ Using VMware VAAI for datastore provisioning is a best practice.
 If this procedure is not suitable for your situation, you should see the following documentation instead:
 
 * https://docs.netapp.com/us-en/ontap/nfs-admin/index.html[NFS management^]
-* http://www.netapp.com/us/media/tr-4067.pdf[NetApp Technical Report 4067: NFS Best Practice and Implementation^]
-* https://www.netapp.com/pdf.html?item=/media/16328-tr-4668pdf.pdf[NetApp Technical Report 4668: Name Services Best Practices^]
-* http://www.netapp.com/us/media/tr-4597.pdf[NetApp Technical Report 4597: VMware vSphere with ONTAP^]
+* https://www.netapp.com/pdf.html?item=/media/10720-tr-4067.pdf[NetApp Technical Report 4067: NFS Best Practice and Implementation Guide^]
+* https://www.netapp.com/pdf.html?item=/media/16328-tr-4668.pdf[NetApp Technical Report 4668: Name Services Best Practices Guide^]
+* https://docs.netapp.com/us-en/netapp-solutions/virtualization/vsphere_ontap_ontap_for_vsphere.html[NetApp Technical Report 4597: VMware vSphere with ONTAP^]
 
 // BURT 1448684, 31 JAN 2022
+// BURT 1455451, 04 FEB 2022
