--- a/fc-config-esxi/index.adoc
+++ b/fc-config-esxi/index.adoc
@@ -30,15 +30,8 @@ Onboard FC and UTA2 (also called "`CNA`") ports, as well as some adapters are co
 +
 This procedure does not cover raw device mapping (RDM) disks or using N-port ID virtualization (NPIV) to provide FC directly to VMs.
 
-== Other ways to do this in ONTAP
-[cols=2,options="header"]
-|===
-| To perform these tasks with... | Refer to...
-| The redesigned System Manager (available with ONTAP 9.7 and later) | link:https://docs.netapp.com/us-en/ontap/task_san_provision_vmware.html[Provision SAN storage for VMware datastores^]
-| The ONTAP command line interface (CLI) | link:https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI^]
-|===
+For more information, see https://docs.netapp.com/us-en/netapp-solutions/virtualization/vsphere_ontap_ontap_for_vsphere.html[TR-4597: VMware vSphere for ONTAP] and the documentation for your VSC release.
 
-
-// BURT 1449742, 2022 Feb 15
+// BURT 1449742, 2022 Feb 16
 // BURT 1448684, 31 JAN 2022
 // BURT 1449742, 11 JAN 2022
