--- a/iscsi-config-esxi/index.adoc
+++ b/iscsi-config-esxi/index.adoc
@@ -2,14 +2,14 @@
 permalink: iscsi-config-esxi/index.html
 sidebar: sidebar
 keywords: iscsi, service, storage, virtual, machine, svm, provision, lun, esx, host, computer
-summary: "You can quickly set up the iSCSI service on a storage virtual machine, provision a LUN, and make the LUN available using an iSCSI initiator on an ESXi host computer."
+summary: "Using the ONTAP System Manager classic interface (ONTAP 9.7 and earlier), you can quickly set up the iSCSI service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an iSCSI initiator on an ESXi host computer."
 ---
 = iSCSI configuration for ESXi using VSC overview
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can quickly set up the iSCSI service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an iSCSI initiator on an ESXi host computer with the ONTAP System Manager classic interface (ONTAP 9.7 and earlier).
+Using the ONTAP System Manager classic interface (ONTAP 9.7 and earlier), you can quickly set up the iSCSI service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an iSCSI initiator on an ESXi host computer.
 
 Use this procedure if:
 
@@ -32,15 +32,8 @@ See link:https://docs.netapp.com/us-en/ontap/networking/index.html[ONTAP 9 Netwo
 * You are not configuring iSCSI SAN boot.
 * You are providing storage to VMs through the ESXi hypervisor and not running an iSCSI initiator within the VM.
 
-== Other ways to do this in ONTAP
+For more information, see https://docs.netapp.com/us-en/netapp-solutions/virtualization/vsphere_ontap_ontap_for_vsphere.html[TR-4597: VMware vSphere for ONTAP] and the documentation for your VSC release.
 
-|===
-
-h| To perform these tasks with... h| Refer to...
-
-| The redesigned System Manager (available with ONTAP 9.7 and later) | link:https://docs.netapp.com/us-en/ontap/task_san_provision_vmware.html[Provision SAN storage for VMware datastores^]
-| The ONTAP command line interface (CLI) | link:https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI^]
-|===
 
 // BURT 1449741, 2022 Feb 16
 // BURT 1448684, 31 JAN 2022
