--- a/online-help-96-97/reference_ports_adapters.adoc
+++ b/online-help-96-97/reference_ports_adapters.adoc
@@ -1,12 +1,4 @@
 ---
 permalink: online-help-96-97/reference_ports_adapters.html
-sidebar: sidebar
-keywords: port, adaptor, online, help, nodes, fcp, interface
-summary: "Ports are grouped under nodes and the nodes are displayed based on the selected protocol category. For example, if the data is served using the FC protocol, then only the nodes with FCP adapters are displayed. The hosted interface count helps you in choosing a port which is less loaded."
+redirect: ontap-sm-classic/online-help-96-97/concept_ethernet_ports.html
 ---
-= Ports and adapters
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-Ports are grouped under nodes and the nodes are displayed based on the selected protocol category. For example, if the data is served using the FC protocol, then only the nodes with FCP adapters are displayed. The hosted interface count helps you in choosing a port which is less loaded.
