--- a/online-help-96-97/task_deleting_vlans.adoc
+++ b/online-help-96-97/task_deleting_vlans.adoc
@@ -1,26 +1,4 @@
 ---
 permalink: online-help-96-97/task_deleting_vlans.html
-sidebar: sidebar
-keywords: delete, vlan, nic, system, manager, failover, rules, group, online, help
-summary: "You can delete VLANs that are configured on network ports by using System Manager. You might have to delete a VLAN before removing a NIC from its slot. When you delete a VLAN, the VLAN is automatically removed from all of the failover rules and groups that use the VLAN."
+redirect: ontap-sm-classic/online-help-96-97/concept_ethernet_ports.html
 ---
-= Deleting VLANs
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can delete VLANs that are configured on network ports by using System Manager. You might have to delete a VLAN before removing a NIC from its slot. When you delete a VLAN, the VLAN is automatically removed from all of the failover rules and groups that use the VLAN.
-
-.Before you begin
-
-No LIFs must be associated with the VLAN.
-
-.Steps
-
-. Click *Network* > *Ethernet Ports*.
-. Select the VLAN that you want to delete, and then click *Delete*.
-. Select the confirmation check box, and then click *Delete*.
-
-*Related information*
-
-xref:reference_network_window.adoc[Network window]
