--- a/online-help-96-97/task_editing_ethernet_port_properties.adoc
+++ b/online-help-96-97/task_editing_ethernet_port_properties.adoc
@@ -1,19 +1,4 @@
 ---
 permalink: online-help-96-97/task_editing_ethernet_port_properties.html
-sidebar: sidebar
-keywords: edit, ethernet, port, settings, duplex, mode, speed, system, manager, online, help
-summary: "You can edit Ethernet port settings such as the duplex mode and speed settings by using System Manager."
+redirect: ontap-sm-classic/online-help-96-97/concept_ethernet_ports.html
 ---
-= Editing Ethernet port settings
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can edit Ethernet port settings such as the duplex mode and speed settings by using System Manager.
-
-.Steps
-
-. Click *Network* > *Ethernet Ports*.
-. Select the physical port, and then click *Edit*.
-. In the *Edit Ethernet Port* dialog box, modify the duplex mode and speed settings to either `manual` or `automatic`.
-. Click *Edit*.
