--- a/online-help-96-97/task_deleting_system_health_alerts.adoc
+++ b/online-help-96-97/task_deleting_system_health_alerts.adoc
@@ -1,23 +1,4 @@
 ---
 permalink: online-help-96-97/task_deleting_system_health_alerts.html
-sidebar: sidebar
-keywords: delete, system, health, alerts, manager, online, help
-summary: "You can use System Manager to delete system health alerts to which you have already responded."
+redirect: ontap-sm-classic/online-help-96-97/concept_system_alerts.html
 ---
-= Deleting system health alerts
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use System Manager to delete system health alerts to which you have already responded.
-
-.Steps
-
-. Click *Events & Jobs* > *System Alerts*.
-. In the *System Alerts* window, click the arrow icon next to the name of subsystem.
-. Select the alert that you want to delete, and then click *Delete*.
-. Click *OK*.
-
-*Related information*
-
-xref:reference_system_health_window.adoc[System Alerts window]
