--- a/online-help-96-97/task_testing_autosupport.adoc
+++ b/online-help-96-97/task_testing_autosupport.adoc
@@ -1,21 +1,4 @@
 ---
 permalink: online-help-96-97/task_testing_autosupport.html
-sidebar: sidebar
-keywords: test, autosupport, setting, online, help, system, manager
-summary: "You can use the AutoSupport Test dialog box in System Manager to test that you have configured the AutoSupport settings correctly."
+redirect: ontap-sm-classic/online-help-96-97/concept_autosupport.html
 ---
-= Testing AutoSupport settings
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use the AutoSupport Test dialog box in System Manager to test that you have configured the AutoSupport settings correctly.
-
-.Steps
-
-. Click *image:../media/nas_bridge_202_icon_settings_olh_96_97.gif[]* > *AutoSupport*.
-. Select the node, and then click *Test*.
-. In the *AutoSupport Test* dialog box, enter the AutoSupport subject text "`Test AutoSupport`" or any text that notifies the recipients that you are testing the AutoSupport settings.
-. Click *Test*.
-+
-An email message with the subject "`Test AutoSupport`" or the text that you typed in the *AutoSupport subject* field is sent to the specified recipients.
