--- a/online-help-96-97/task_deleting_schedules.adoc
+++ b/online-help-96-97/task_deleting_schedules.adoc
@@ -1,18 +1,4 @@
 ---
 permalink: online-help-96-97/task_deleting_schedules.html
-sidebar: sidebar
-keywords: delete, schedule, online, help, system, manager
-summary: "You can use System Manager to delete the schedules that run specific storage management tasks."
----
-= Deleting schedules
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use System Manager to delete the schedules that run specific storage management tasks.
-
-.Steps
-
-. Click *Protection* > *Schedules*.
-. Select the schedule that you want to delete and click *Delete*.
-. Select the confirmation check box, and then click *Delete*.
+sidebar: ontap-sm-classic/online-help-96-97/concept_schedules.html
+//2022-02-21, Created by Mairead sm-classic-rework
