--- a/online-help-96-97/task_creating_protection_policies_cluster_scope.adoc
+++ b/online-help-96-97/task_creating_protection_policies_cluster_scope.adoc
@@ -1,4 +1,5 @@
 ---
 permalink: online-help-96-97/task_creating_protection_policies_cluster_scope.html
-sidebar: ontap-sm-classic/online-help-96-97/concept_protection_policies.html
+redirect: ontap-sm-classic/online-help-96-97/concept_protection_policies.html
+---
 //2022-02-21, Created by Mairead sm-classic-rework
