--- a/online-help-96-97/task_editing_snapshot_policies.adoc
+++ b/online-help-96-97/task_editing_snapshot_policies.adoc
@@ -1,4 +1,5 @@
 ---
 permalink: online-help-96-97/task_editing_snapshot_policies.html
-sidebar: online-help-96-97/concept_snapshot_policies.html
+redirect: online-help-96-97/concept_snapshot_policies.html
+---
 //2022-02-21, Created by Mairead sm-classic-rework
