--- a/online-help-96-97/concept_shelf_configuration_requirements_for_multi_disk_carrier_disk_shelves.adoc
+++ b/online-help-96-97/concept_shelf_configuration_requirements_for_multi_disk_carrier_disk_shelves.adoc
@@ -1,12 +1,4 @@
 ---
 permalink: online-help-96-97/concept_shelf_configuration_requirements_for_multi_disk_carrier_disk_shelves.html
-sidebar: sidebar
-keywords: shelf, configuration, requirements, multi, disk, carrier, storage, shelves, online, help
-summary: "You can combine multi-disk carrier disk shelves with single-disk carrier disk shelves (standard disk shelves) on the same storage system and within in the same stack."
+redirect: ontap/disks-aggregates/add-disks-node-task.html
 ---
-= Shelf configuration requirements for multi-disk carrier storage shelves
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can combine multi-disk carrier disk shelves with single-disk carrier disk shelves (standard disk shelves) on the same storage system and within in the same stack.
