--- a/online-help-96-97/concept_mirror_relationships.adoc
+++ b/online-help-96-97/concept_mirror_relationships.adoc
@@ -1,12 +1,4 @@
 ---
 permalink: online-help-96-97/concept_mirror_relationships.html
-sidebar: sidebar
-keywords: system, manager, create, manage, mirror, relationship, policy, online, help
-summary: "You can use System Manager to create and manage mirror relationships by using the mirror policy."
+redirect: ontap/concept_dp_overview.html
 ---
-= Mirror relationships
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use System Manager to create and manage mirror relationships by using the mirror policy.
