--- a/online-help-96-97/task_viewing_system_manager_log_files.adoc
+++ b/online-help-96-97/task_viewing_system_manager_log_files.adoc
@@ -32,3 +32,19 @@ This file contains the latest logs for System Manager.
  ** `php.log`
  ** `apache_access.log`
  ** `messages.log`
+
+== How system logging works
+
+ System logging is an essential tool for application troubleshooting. You should enable system logging so that if there is a problem with an application, the problem can be located. You can enable System Manager logging at runtime without modifying the application binary.
+
+ Log output can be voluminous and therefore can become difficult to manage. System Manager enables you to refine the logging output by selecting which type of log statements are output. By default, system logging is set to INFO. You can choose one of the following log levels:
+
+ * OFF
+ * ERROR
+ * WARN
+ * INFO
+ * DEBUG
+
+ These levels function hierarchically. A log level set to OFF indicates no logging of messages.
+
+// 2022-03-23, sm-classic rework, created by Aoife
