--- a/online-help-96-97/concept_what_nvme_subsystem_is.adoc
+++ b/online-help-96-97/concept_what_nvme_subsystem_is.adoc
@@ -4,22 +4,13 @@ sidebar: sidebar
 keywords: nvme, subsystem, fc, rdma, transport, port, vserver, online, help, controller, cluster, table, settings, manage
 summary: "An NVMe subsystem includes one or more controllers, one or more namespaces, one or more non-volatile memory (NVM) subsystem ports (FC-NVMe or RDMA transport ports), an NVM storage medium, and an interface between the controllers and the NVM storage medium. For controller mapping and management, an NVM subsystem maps to a vserver in ONTAP."
 ---
-= What an NVMe subsystem is
+= Manage NVMe subsystems
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-An NVMe subsystem includes one or more controllers, one or more namespaces, one or more non-volatile memory (NVM) subsystem ports (FC-NVMe or RDMA transport ports), an NVM storage medium, and an interface between the controllers and the NVM storage medium. For controller mapping and management, an NVM subsystem maps to a vserver in ONTAP.
 
 An NVMe subsystem can be created using System Manager. You can associate the NVMe subsystem with different hosts and namespaces within the vserver. Also, each vserver can support more than one NVMe subsystem. However, you cannot configure a NVMe subsystem to be used on multiple vservers.
-
-An NVMe over Fabric (NVMeoF) subsystem is a separate kernel object that resides in the FreeBSD kernel. The NVMeoF subsystem interfaces with the following components:
-
-* SAN components, such as BCOMKA, FCT, and VDOM
-* WAFL
-* RAS components, such as CM, ASUP, and EMS
-
-All interfaces with NVMeoF subsystems adhere to the current definitions and patterns found in ONTAP.
 
 == Create NVMe subsystems
 
@@ -156,3 +147,4 @@ Opens the Edit NVMe Subsystem dialog box, which enables you to edit an existing 
 Opens the Delete NVMe Subsystem confirmation dialog box, which enables you to delete an existing NVMe subsystem.
 
 // 2021-12-20, Created by Aoife, sm-classic rework
+// 2022-03-24, sm-classic rework
