--- a/online-help-96-97/concept_what_snapvault_backup_is.adoc
+++ b/online-help-96-97/concept_what_snapvault_backup_is.adoc
@@ -1,4 +1,4 @@
 ---
 permalink: online-help-96-97/concept_what_snapvault_backup_is.html
-redirect: redirect: ontap/concept_dp_overview.html
+redirect: ontap/concept_dp_overview.html
 ---
