--- a/online-help-96-97/reference_windows_layout.adoc
+++ b/online-help-96-97/reference_windows_layout.adoc
@@ -1,16 +1,4 @@
 ---
 permalink: online-help-96-97/reference_windows_layout.html
-sidebar: sidebar
-keywords: system, manager, window, layout, online, help
-summary: "Understanding the typical window layout helps you to navigate and use System Manager effectively."
+redirect: ontap-sm-classic/online-help-96-97/index.html
 ---
-= System Manager window layout
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-Understanding the typical window layout helps you to navigate and use System Manager effectively.
-
-== Typical layout of System Manager windows
-
-image::../media/sample_window_new_for_9_6.gif[]
