--- a/online-help-96-97/concept_snapmirror_licensing.adoc
+++ b/online-help-96-97/concept_snapmirror_licensing.adoc
@@ -1,4 +1,4 @@
 ---
 permalink: online-help-96-97/concept_snapmirror_licensing.html
-redirect: ontap/data-protection/snapmirror-licensing-concept.htm
+redirect: ontap/data-protection/snapmirror-licensing-concept.html
 ---
