--- a/online-help-96-97/task_viewing_system_manager_log_files.adoc
+++ b/online-help-96-97/task_viewing_system_manager_log_files.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: view, ontap, system, manager, log, file, online, help
 summary: "If you encounter any issues when using System Manager, you can send the log files to technical support to help troubleshoot the issues. The System Manager log files are located in the mlog directory along with the ONTAP log files."
 ---
-= Viewing ONTAP System Manager log files
+= View System Manager log files - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-If you encounter any issues when using System Manager, you can send the log files to technical support to help troubleshoot the issues. The System Manager log files are located in the `mlog` directory along with the ONTAP log files.
+If you encounter any issues when using ONTAP System Manager classic (available in 9.7 and earlier), you can send the log files to technical support to help troubleshoot the issues. The System Manager log files are located in the `mlog` directory along with the ONTAP log files.
 
 .Steps
 
