--- a/volume-disaster-recovery/task_updating_source_volume.adoc
+++ b/volume-disaster-recovery/task_updating_source_volume.adoc
@@ -24,7 +24,7 @@ You must perform this task from the *source* cluster.
 . Perform an incremental transfer from the recent common Snapshot copy between the source and destination volumes.
  ** Beginning with ONTAP 9.3: Select the *As per policy* option.
  ** ONTAP 9.2 or earlier: Select the *On demand* option.
-. Select *Limit transfer bandwidth to* in order to limit the network bandwidth used for transfers, and then specify the maximum transfer speed.
+. *Optional:* Select *Limit transfer bandwidth to* in order to limit the network bandwidth used for transfers, and then specify the maximum transfer speed.
 . Click *Update*.
 . Verify that the transfer status is `Idle` and last transfer type is `Update` in the *Details* tab.
 +
